# socket-programming

./: .gitignore  .gitmodules  .pre-commit-config.yaml  COPYING.md  README.md  client.py  logging_config.py  pyproject.toml  server.py
.github/workflows/: mypy.yaml  pylint.yml  unittests.yml
Assignment/: client.py  command_line_application.py  common.py  message_request.py  message_response.py  message_type.py  names.txt  port_number.py  record.py  server.py  test.py
client/: __init__.py  __main__.py  client.py
cpp_example/: CMakeLists.txt  README.md
cpp_example/include/: client.h  message.h  server.h
cpp_example/src/: client.cpp  client_main.cpp  message.cpp  server.cpp
docs/: Makefile  conf.py  index.rst
include/: message.h  server.h
server/: __init__.py  __main__.py  server.py
src/: __init__.py  client.py  command_line_application.py  logging_config.py  login_request.py  login_response.py  message_request.py  message_response.py  message_type.py  parse_hostname.py  parse_username.py  port_number.py  receive_all.py  record.py  server.cpp  server.py  server_main.cpp
src/applications/: client.py  command_line_application.py  server.py
src/packets/: __init__.py  create_request.py  key_request.py  key_response.py  login_request.py  login_response.py  message.py  message_request.py  message_response.py  packet.py  read_request.py  read_response.py  registration_request.py  session_wrapper.py  type_wrapper.py
test/: brute_test.py  test.py  test_client.py  test_message_type.py  test_port_number.py
tests/: __init__.py  brute_test.py  test_client.py  test_client_parse_arguments.py  test_message_type.py  test_parse_arguments.py  test_port_number.py
tests/applications/: __init__.py  test_client.py  test_client_parse_arguments.py  test_command_line_application.py  test_server.py
tests/integration/: __init__.py  test_more_messages.py
tests/packets/: __init__.py  test_create_request.py  test_message.py  test_message_request.py  test_message_response.py  test_packet.py  test_read_request.py  test_read_response.py
tests/resources/: client_input  names.txt
tests/unit/: __init__.py  test_message_type.py  test_parse_arguments.py  test_port_number.py
