[project]
name = "socket-programming"
version = "1.0.0"
authors = [{ name = "Harry Parkes", email = "harrydparkes@proton.me" }]
description = "Sever-Client program pair capable of delivering messages between clients"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
]

[project.urls]
"Homepage" = "https://github.com/hazzery/socket-programming"
"Bug Tracker" = "https://github.com/hazzery/socket-programming/issues"

[tool.ruff]
exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "EM101",
  "TRY003",
  "T201",
  "FBT001",
  "ANN101",
  "ANN102",
  "PT",
]
